syntax = "proto3";

package protocols.p2p;

// cd this dir then run cmd as next line
// protoc --gofast_out=. p2p.proto

// designed to be shared between all app protocols
message MessageData {
  // shared between all requests
  string clientVersion = 1; // client version
  int64 timestamp = 2;     // unix time
  string id = 3;           // allows requesters to use request data when processing a response
  bool gossip = 4;         // true to have receiver peer gossip the message to neighbors
  string nodeId = 5;       // id of node that created the message (not the peer that may have sent it). =base58(multihash(nodePubKey))
  bytes nodePubKey = 6;    // Authoring node Secp256k1 public key (32bytes) - protobufs serielized

  string msgType = 7;
  bytes data = 8;  // origin msg from client
  bytes sign = 9;         // signature of message data + method specific data by message authoring node.
}

//// ping protocol

// A protocol defines a set of requests and responses.
message ReylayMsg {
  MessageData messageData = 1;
  string version = 2;

}

//message GetKeyResponse {
//  MessageData messageData = 1;
//  string version = 2;
//}